@@ -4,21 +4,37 @@ import static io.quarkus.test.common.PathTestHelper.getAppClassLocationForTestLo
 import static io.quarkus.test.common.PathTestHelper.getTestClassesLocation;
 
 import java.io.Closeable;
+import java.io.File;
 import java.io.IOException;
+import java.lang.annotation.Annotation;
+import java.lang.management.ManagementFactory;
+import java.lang.management.ThreadInfo;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
 import java.util.AbstractMap;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.ServiceLoader;
+import java.util.Set;
+import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingDeque;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -35,10 +51,13 @@ import org.jboss.jandex.FieldInfo;
 import org.jboss.jandex.Index;
 import org.jboss.jandex.Type;
 import org.jboss.logging.Logger;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.extension.AfterAllCallback;
 import org.junit.jupiter.api.extension.AfterEachCallback;
 import org.junit.jupiter.api.extension.BeforeAllCallback;
 import org.junit.jupiter.api.extension.BeforeEachCallback;
+import org.junit.jupiter.api.extension.ConditionEvaluationResult;
+import org.junit.jupiter.api.extension.ExecutionCondition;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.InvocationInterceptor;
 import org.junit.jupiter.api.extension.ParameterContext;
@@ -55,6 +74,7 @@ import io.quarkus.bootstrap.app.QuarkusBootstrap;
 import io.quarkus.bootstrap.app.RunningQuarkusApplication;
 import io.quarkus.bootstrap.app.StartupAction;
 import io.quarkus.bootstrap.model.PathsCollection;
+import io.quarkus.bootstrap.resolver.model.QuarkusModel;
 import io.quarkus.bootstrap.runner.Timing;
 import io.quarkus.bootstrap.utils.BuildToolHelper;
 import io.quarkus.builder.BuildChainBuilder;
@@ -63,10 +83,13 @@ import io.quarkus.builder.BuildStep;
 import io.quarkus.deployment.builditem.TestAnnotationBuildItem;
 import io.quarkus.deployment.builditem.TestClassBeanBuildItem;
 import io.quarkus.deployment.builditem.TestClassPredicateBuildItem;
+import io.quarkus.runtime.LaunchMode;
+import io.quarkus.runtime.configuration.DurationConverter;
 import io.quarkus.runtime.configuration.ProfileManager;
 import io.quarkus.runtime.test.TestHttpEndpointProvider;
 import io.quarkus.test.common.PathTestHelper;
 import io.quarkus.test.common.PropertyTestUtil;
+import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.common.RestAssuredURLManager;
 import io.quarkus.test.common.TestClassIndexer;
 import io.quarkus.test.common.TestResourceManager;
@@ -74,22 +97,24 @@ import io.quarkus.test.common.TestScopeManager;
 import io.quarkus.test.common.http.TestHTTPEndpoint;
 import io.quarkus.test.common.http.TestHTTPResourceManager;
 import io.quarkus.test.junit.buildchain.TestBuildChainCustomizerProducer;
+import io.quarkus.test.junit.callback.QuarkusTestAfterConstructCallback;
 import io.quarkus.test.junit.callback.QuarkusTestAfterEachCallback;
 import io.quarkus.test.junit.callback.QuarkusTestBeforeAllCallback;
+import io.quarkus.test.junit.callback.QuarkusTestBeforeClassCallback;
 import io.quarkus.test.junit.callback.QuarkusTestBeforeEachCallback;
 import io.quarkus.test.junit.callback.QuarkusTestMethodContext;
 import io.quarkus.test.junit.internal.DeepClone;
 import io.quarkus.test.junit.internal.XStreamDeepClone;
 
-//todo: share common core with QuarkusUnitTest
 public class QuarkusTestExtension
         implements BeforeEachCallback, AfterEachCallback, BeforeAllCallback, InvocationInterceptor, AfterAllCallback,
-        ParameterResolver {
+        ParameterResolver, ExecutionCondition {
 
     private static final Logger log = Logger.getLogger(QuarkusTestExtension.class);
 
     protected static final String TEST_LOCATION = "test-location";
     protected static final String TEST_CLASS = "test-class";
+    public static final String QUARKUS_TEST_HANG_DETECTION_TIMEOUT = "quarkus.test.hang-detection-timeout";
 
     private static boolean failedBoot;
 
@@ -97,26 +122,82 @@ public class QuarkusTestExtension
     private static Object actualTestInstance;
     private static ClassLoader originalCl;
     private static RunningQuarkusApplication runningQuarkusApplication;
-    private static Path testClassLocation;
     private static Throwable firstException; //if this is set then it will be thrown from the very first test that is run, the rest are aborted
 
-    private static List<Object> beforeAllCallbacks;
+    private static List<Object> beforeClassCallbacks;
+    private static List<Object> afterConstructCallbacks;
+    private static List<Object> legacyAfterConstructCallbacks;
     private static List<Object> beforeEachCallbacks;
     private static List<Object> afterEachCallbacks;
     private static Class<?> quarkusTestMethodContextClass;
     private static Class<? extends QuarkusTestProfile> quarkusTestProfile;
+    private static boolean hasPerTestResources;
+    private static Class<?> currentJUnitTestClass;
     private static List<Function<Class<?>, String>> testHttpEndpointProviders;
 
     private static DeepClone deepClone;
+    //needed for @Nested
+    private static final Deque<Class<?>> currentTestClassStack = new ArrayDeque<>();
+    private static ScheduledExecutorService hangDetectionExecutor;
+    private static Duration hangTimeout;
+    private static ScheduledFuture<?> hangTaskKey;
+    private static final Runnable hangDetectionTask = new Runnable() {
+
+        final AtomicBoolean runOnce = new AtomicBoolean();
+
+        @Override
+        public void run() {
+            if (!runOnce.compareAndSet(false, true)) {
+                return;
+            }
+            System.err.println("@QuarkusTest has detected a hang, as there has been no test activity in " + hangTimeout);
+            System.err.println("To configure this timeout use the " + QUARKUS_TEST_HANG_DETECTION_TIMEOUT + " config property");
+            System.err.println("A stack track is below to help diagnose the potential hang");
+            System.err.println("=== Stack Trace ===");
+            ThreadInfo[] threads = ManagementFactory.getThreadMXBean().dumpAllThreads(true, true);
+            for (ThreadInfo info : threads) {
+                if (info == null) {
+                    System.err.println("  Inactive");
+                    continue;
+                }
+                Thread.State state = info.getThreadState();
+                System.err.println("Thread " + info.getThreadName() + ": " + state);
+                if (state == Thread.State.WAITING) {
+                    System.err.println("  Waiting on " + info.getLockName());
+                } else if (state == Thread.State.BLOCKED) {
+                    System.err.println("  Blocked on " + info.getLockName());
+                    System.err.println("  Blocked by " + info.getLockOwnerName());
+                }
+                System.err.println("  Stack:");
+                for (StackTraceElement frame : info.getStackTrace()) {
+                    System.err.println("    " + frame.toString());
+                }
+            }
+            System.err.println("=== End Stack Trace ===");
+            //we only every dump once
+        }
+    };
 
     private ExtensionState doJavaStart(ExtensionContext context, Class<? extends QuarkusTestProfile> profile) throws Throwable {
+        hangDetectionExecutor = Executors.newSingleThreadScheduledExecutor();
+        String time = "10m";
+        //config is not established yet
+        //we can only read from system properties
+        String sysPropString = System.getProperty(QUARKUS_TEST_HANG_DETECTION_TIMEOUT);
+        if (sysPropString != null) {
+            time = sysPropString;
+        }
+        hangTimeout = new DurationConverter().convert(time);
+        hangTaskKey = hangDetectionExecutor.schedule(hangDetectionTask, hangTimeout.toMillis(), TimeUnit.MILLISECONDS);
+
         quarkusTestProfile = profile;
+        currentJUnitTestClass = context.getRequiredTestClass();
         Closeable testResourceManager = null;
         try {
             final LinkedBlockingDeque<Runnable> shutdownTasks = new LinkedBlockingDeque<>();
 
             Class<?> requiredTestClass = context.getRequiredTestClass();
-            testClassLocation = getTestClassesLocation(requiredTestClass);
+            Path testClassLocation = getTestClassesLocation(requiredTestClass);
             final Path appClassLocation = getAppClassLocationForTestLocation(testClassLocation.toString());
 
             PathsCollection.Builder rootBuilder = PathsCollection.builder();
@@ -130,17 +211,21 @@ public class QuarkusTestExtension
                     rootBuilder.add(testResourcesLocation);
                 }
             }
+
             originalCl = Thread.currentThread().getContextClassLoader();
             Map<String, String> sysPropRestore = new HashMap<>();
             sysPropRestore.put(ProfileManager.QUARKUS_TEST_PROFILE_PROP,
                     System.getProperty(ProfileManager.QUARKUS_TEST_PROFILE_PROP));
+
+            // clear the test.url system property as the value leaks into the run when using different profiles
+            System.clearProperty("test.url");
 
             final QuarkusBootstrap.Builder runnerBuilder = QuarkusBootstrap.builder()
                     .setIsolateDeployment(true)
                     .setMode(QuarkusBootstrap.Mode.TEST);
             QuarkusTestProfile profileInstance = null;
             if (profile != null) {
-                profileInstance = profile.newInstance();
+                profileInstance = profile.getConstructor().newInstance();
                 Map<String, String> additional = new HashMap<>(profileInstance.getConfigOverrides());
                 if (!profileInstance.getEnabledAlternatives().isEmpty()) {
                     additional.put("quarkus.arc.selected-alternatives", profileInstance.getEnabledAlternatives().stream()
@@ -151,6 +236,9 @@ public class QuarkusTestExtension
                                 }
                             })
                             .map(Class::getName).collect(Collectors.joining(",")));
+                }
+                if (profileInstance.disableApplicationLifecycleObservers()) {
+                    additional.put("quarkus.arc.test.disable-application-lifecycle-observers", "true");
                 }
                 if (profileInstance.getConfigProfile() != null) {
                     System.setProperty(ProfileManager.QUARKUS_TEST_PROFILE_PROP, profileInstance.getConfigProfile());
@@ -165,7 +253,17 @@ public class QuarkusTestExtension
                 }
             }
 
-            runnerBuilder.setProjectRoot(Paths.get("").normalize().toAbsolutePath());
+            final Path projectRoot = Paths.get("").normalize().toAbsolutePath();
+            runnerBuilder.setProjectRoot(projectRoot);
+            Path outputDir;
+            try {
+                // this should work for both maven and gradle
+                outputDir = projectRoot.resolve(projectRoot.relativize(testClassLocation).getName(0));
+            } catch (Exception e) {
+                // this shouldn't happen since testClassLocation is usually found under the project dir
+                outputDir = projectRoot;
+            }
+            runnerBuilder.setTargetDirectory(outputDir);
 
             rootBuilder.add(appClassLocation);
             final Path appResourcesLocation = PathTestHelper.getResourcesForClassesDirOrNull(appClassLocation, "main");
@@ -173,12 +271,27 @@ public class QuarkusTestExtension
                 rootBuilder.add(appResourcesLocation);
             }
 
-            Path root = Paths.get("").normalize().toAbsolutePath();
             // If gradle project running directly with IDE
             if (System.getProperty(BootstrapConstants.SERIALIZED_APP_MODEL) == null) {
-                BuildToolHelper.enableGradleAppModel(root, "TEST");
+                QuarkusModel model = BuildToolHelper.enableGradleAppModelForTest(projectRoot);
+                if (model != null) {
+                    final Set<File> classDirectories = model.getWorkspace().getMainModule().getSourceSet()
+                            .getSourceDirectories();
+                    for (File classes : classDirectories) {
+                        if (classes.exists() && !rootBuilder.contains(classes.toPath())) {
+                            rootBuilder.add(classes.toPath());
+                        }
+                    }
+                }
+            } else if (System.getProperty(BootstrapConstants.OUTPUT_SOURCES_DIR) != null) {
+                final String[] sourceDirectories = System.getProperty(BootstrapConstants.OUTPUT_SOURCES_DIR).split(",");
+                for (String sourceDirectory : sourceDirectories) {
+                    final Path directory = Paths.get(sourceDirectory);
+                    if (Files.exists(directory) && !rootBuilder.contains(directory)) {
+                        rootBuilder.add(directory);
+                    }
+                }
             }
-
             runnerBuilder.setApplicationRoot(rootBuilder.build());
 
             CuratedApplication curatedApplication = runnerBuilder
@@ -203,16 +316,28 @@ public class QuarkusTestExtension
 
             //must be done after the TCCL has been set
             testResourceManager = (Closeable) startupAction.getClassLoader().loadClass(TestResourceManager.class.getName())
-                    .getConstructor(Class.class, List.class)
+                    .getConstructor(Class.class, Class.class, List.class, boolean.class)
                     .newInstance(requiredTestClass,
-                            getAdditionalTestResources(profileInstance, startupAction.getClassLoader()));
+                            profile != null ? profile : null,
+                            getAdditionalTestResources(profileInstance, startupAction.getClassLoader()),
+                            profileInstance != null && profileInstance.disableGlobalTestResources());
             testResourceManager.getClass().getMethod("init").invoke(testResourceManager);
             testResourceManager.getClass().getMethod("start").invoke(testResourceManager);
+            hasPerTestResources = (boolean) testResourceManager.getClass().getMethod("hasPerTestResources")
+                    .invoke(testResourceManager);
 
             populateCallbacks(startupAction.getClassLoader());
 
             runningQuarkusApplication = startupAction.run();
 
+            //now we have full config reset the hang timer
+
+            if (hangTaskKey != null) {
+                hangTaskKey.cancel(false);
+                hangTimeout = runningQuarkusApplication.getConfigValue(QUARKUS_TEST_HANG_DETECTION_TIMEOUT, Duration.class)
+                        .orElse(Duration.of(10, ChronoUnit.MINUTES));
+                hangTaskKey = hangDetectionExecutor.schedule(hangDetectionTask, hangTimeout.toMillis(), TimeUnit.MILLISECONDS);
+            }
             ConfigProviderResolver.setInstance(new RunningAppConfigResolver(runningQuarkusApplication));
 
             System.setProperty("test.url", TestHTTPResourceManager.getUri(runningQuarkusApplication));
@@ -231,26 +356,28 @@ public class QuarkusTestExtension
                                 shutdownTasks.pop().run();
                             }
                         } finally {
-                            for (Map.Entry<String, String> entry : sysPropRestore.entrySet()) {
-                                String val = entry.getValue();
-                                if (val == null) {
-                                    System.clearProperty(entry.getKey());
-                                } else {
-                                    System.setProperty(entry.getKey(), val);
+                            try {
+                                for (Map.Entry<String, String> entry : sysPropRestore.entrySet()) {
+                                    String val = entry.getValue();
+                                    if (val == null) {
+                                        System.clearProperty(entry.getKey());
+                                    } else {
+                                        System.setProperty(entry.getKey(), val);
+                                    }
                                 }
+                                tm.close();
+                            } finally {
+                                hangDetectionExecutor.shutdown();
                             }
-                            tm.close();
+                        }
+                        try {
+                            TestClassIndexer.removeIndex(requiredTestClass);
+                        } catch (Exception ignored) {
                         }
                     }
                 }
             };
             ExtensionState state = new ExtensionState(testResourceManager, shutdownTask);
-            Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
-                @Override
-                public void run() {
-                    state.close();
-                }
-            }, "Quarkus Test Cleanup Shutdown task"));
             return state;
         } catch (Throwable e) {
 
@@ -284,19 +411,20 @@ public class QuarkusTestExtension
         try {
             Constructor<?> testResourceClassEntryConstructor = Class
                     .forName(TestResourceManager.TestResourceClassEntry.class.getName(), true, classLoader)
-                    .getConstructor(Class.class, Map.class);
+                    .getConstructor(Class.class, Map.class, Annotation.class, boolean.class);
 
             List<QuarkusTestProfile.TestResourceEntry> testResources = profileInstance.testResources();
             List<Object> result = new ArrayList<>(testResources.size());
             for (QuarkusTestProfile.TestResourceEntry testResource : testResources) {
                 Object instance = testResourceClassEntryConstructor.newInstance(
-                        Class.forName(testResource.getClazz().getName(), true, classLoader), testResource.getArgs());
+                        Class.forName(testResource.getClazz().getName(), true, classLoader), testResource.getArgs(),
+                        null, testResource.isParallel());
                 result.add(instance);
             }
 
             return result;
         } catch (Exception e) {
-            throw new IllegalStateException("Unable to handle profile " + profileInstance.getClass());
+            throw new IllegalStateException("Unable to handle profile " + profileInstance.getClass(), e);
         }
     }
 
@@ -309,14 +437,26 @@ public class QuarkusTestExtension
         // make sure that we start over everytime we populate the callbacks
         // otherwise previous runs of QuarkusTest (with different TestProfile values can leak into the new run)
         quarkusTestMethodContextClass = null;
-        beforeAllCallbacks = new ArrayList<>();
+        beforeClassCallbacks = new ArrayList<>();
+        afterConstructCallbacks = new ArrayList<>();
+        legacyAfterConstructCallbacks = new ArrayList<>();
         beforeEachCallbacks = new ArrayList<>();
         afterEachCallbacks = new ArrayList<>();
 
-        ServiceLoader<?> quarkusTestBeforeAllLoader = ServiceLoader
+        ServiceLoader<?> quarkusTestBeforeClassLoader = ServiceLoader
+                .load(Class.forName(QuarkusTestBeforeClassCallback.class.getName(), false, classLoader), classLoader);
+        for (Object quarkusTestBeforeClassCallback : quarkusTestBeforeClassLoader) {
+            beforeClassCallbacks.add(quarkusTestBeforeClassCallback);
+        }
+        ServiceLoader<?> quarkusTestAfterConstructLoader = ServiceLoader
+                .load(Class.forName(QuarkusTestAfterConstructCallback.class.getName(), false, classLoader), classLoader);
+        for (Object quarkusTestAfterConstructCallback : quarkusTestAfterConstructLoader) {
+            afterConstructCallbacks.add(quarkusTestAfterConstructCallback);
+        }
+        ServiceLoader<?> quarkusTestLegacyAfterConstructLoader = ServiceLoader
                 .load(Class.forName(QuarkusTestBeforeAllCallback.class.getName(), false, classLoader), classLoader);
-        for (Object quarkusTestBeforeAllCallback : quarkusTestBeforeAllLoader) {
-            beforeAllCallbacks.add(quarkusTestBeforeAllCallback);
+        for (Object quarkusTestLegacyAfterConstructCallback : quarkusTestLegacyAfterConstructLoader) {
+            legacyAfterConstructCallbacks.add(quarkusTestLegacyAfterConstructCallback);
         }
         ServiceLoader<?> quarkusTestBeforeEachLoader = ServiceLoader
                 .load(Class.forName(QuarkusTestBeforeEachCallback.class.getName(), false, classLoader), classLoader);
@@ -332,9 +472,10 @@ public class QuarkusTestExtension
 
     @Override
     public void beforeEach(ExtensionContext context) throws Exception {
-        if (isNativeTest(context)) {
+        if (isNativeOrIntegrationTest()) {
             return;
         }
+        resetHangTimeout();
         if (!failedBoot) {
             ClassLoader original = setCCL(runningQuarkusApplication.getClassLoader());
             try {
@@ -346,8 +487,14 @@ public class QuarkusTestExtension
                 }
                 String endpointPath = getEndpointPath(context, testHttpEndpointProviders);
                 if (runningQuarkusApplication != null) {
+                    boolean secure = false;
+                    Optional<String> insecureAllowed = runningQuarkusApplication
+                            .getConfigValue("quarkus.http.insecure-requests", String.class);
+                    if (insecureAllowed.isPresent()) {
+                        secure = !insecureAllowed.get().toLowerCase(Locale.ENGLISH).equals("enabled");
+                    }
                     runningQuarkusApplication.getClassLoader().loadClass(RestAssuredURLManager.class.getName())
-                            .getDeclaredMethod("setURL", boolean.class, String.class).invoke(null, false, endpointPath);
+                            .getDeclaredMethod("setURL", boolean.class, String.class).invoke(null, secure, endpointPath);
                     runningQuarkusApplication.getClassLoader().loadClass(TestScopeManager.class.getName())
                             .getDeclaredMethod("setup", boolean.class).invoke(null, false);
                 }
@@ -394,17 +541,18 @@ public class QuarkusTestExtension
 
     @Override
     public void afterEach(ExtensionContext context) throws Exception {
-        if (isNativeTest(context)) {
+        if (isNativeOrIntegrationTest()) {
             return;
         }
+        resetHangTimeout();
         if (!failedBoot) {
             popMockContext();
+            ClassLoader original = setCCL(runningQuarkusApplication.getClassLoader());
             for (Object afterEachCallback : afterEachCallbacks) {
                 Map.Entry<Class<?>, ?> tuple = createQuarkusTestMethodContextTuple(context);
                 afterEachCallback.getClass().getMethod("afterEach", tuple.getKey())
                         .invoke(afterEachCallback, tuple.getValue());
             }
-            ClassLoader original = setCCL(runningQuarkusApplication.getClassLoader());
             try {
                 runningQuarkusApplication.getClassLoader().loadClass(RestAssuredURLManager.class.getName())
                         .getDeclaredMethod("clearURL").invoke(null);
@@ -457,22 +605,26 @@ public class QuarkusTestExtension
                 constructor.newInstance(actualTestInstance, actualTestMethod));
     }
 
-    private boolean isNativeTest(ExtensionContext context) {
-        return context.getRequiredTestClass().isAnnotationPresent(NativeImageTest.class);
+    private boolean isNativeOrIntegrationTest() {
+        for (Class<?> i : currentTestClassStack) {
+            if (i.isAnnotationPresent(NativeImageTest.class) || i.isAnnotationPresent(QuarkusIntegrationTest.class)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     private ExtensionState ensureStarted(ExtensionContext extensionContext) {
         ExtensionContext root = extensionContext.getRoot();
         ExtensionContext.Store store = root.getStore(ExtensionContext.Namespace.GLOBAL);
         ExtensionState state = store.get(ExtensionState.class.getName(), ExtensionState.class);
-        TestProfile annotation = extensionContext.getRequiredTestClass().getAnnotation(TestProfile.class);
-        Class<? extends QuarkusTestProfile> selectedProfile = null;
-        if (annotation != null) {
-            selectedProfile = annotation.value();
-        }
+        Class<? extends QuarkusTestProfile> selectedProfile = getQuarkusTestProfile(extensionContext);
         boolean wrongProfile = !Objects.equals(selectedProfile, quarkusTestProfile);
-        if ((state == null && !failedBoot) || wrongProfile) {
-            if (wrongProfile) {
+        // we reload the test resources if we changed test class and if we had or will have per-test test resources
+        boolean reloadTestResources = !Objects.equals(extensionContext.getRequiredTestClass(), currentJUnitTestClass)
+                && (hasPerTestResources || hasPerTestResources(extensionContext));
+        if ((state == null && !failedBoot) || wrongProfile || reloadTestResources) {
+            if (wrongProfile || reloadTestResources) {
                 if (state != null) {
                     try {
                         state.close();
@@ -494,6 +646,15 @@ public class QuarkusTestExtension
         return state;
     }
 
+    private Class<? extends QuarkusTestProfile> getQuarkusTestProfile(ExtensionContext extensionContext) {
+        TestProfile annotation = extensionContext.getRequiredTestClass().getAnnotation(TestProfile.class);
+        Class<? extends QuarkusTestProfile> selectedProfile = null;
+        if (annotation != null) {
+            selectedProfile = annotation.value();
+        }
+        return selectedProfile;
+    }
+
     private static ClassLoader setCCL(ClassLoader cl) {
         final Thread thread = Thread.currentThread();
         final ClassLoader original = thread.getContextClassLoader();
@@ -513,9 +674,13 @@ public class QuarkusTestExtension
 
     @Override
     public void beforeAll(ExtensionContext context) throws Exception {
-        if (isNativeTest(context)) {
+        currentTestClassStack.push(context.getRequiredTestClass());
+        //set the right launch mode in the outer CL, used by the HTTP host config source
+        ProfileManager.setLaunchMode(LaunchMode.TEST);
+        if (isNativeOrIntegrationTest()) {
             return;
         }
+        resetHangTimeout();
         ensureStarted(context);
         if (runningQuarkusApplication != null) {
             pushMockContext();
@@ -551,10 +716,11 @@ public class QuarkusTestExtension
     @Override
     public void interceptBeforeAllMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext,
             ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             invocation.proceed();
             return;
         }
+        resetHangTimeout();
         ensureStarted(extensionContext);
         if (failedBoot) {
             throwBootFailureException();
@@ -567,12 +733,37 @@ public class QuarkusTestExtension
     @Override
     public <T> T interceptTestClassConstructor(Invocation<T> invocation,
             ReflectiveInvocationContext<Constructor<T>> invocationContext, ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             return invocation.proceed();
+        }
+        resetHangTimeout();
+        ExtensionState state = ensureStarted(extensionContext);
+        if (failedBoot) {
+            throwBootFailureException();
+            return null;
         }
         T result;
         ClassLoader old = Thread.currentThread().getContextClassLoader();
         Class<?> requiredTestClass = extensionContext.getRequiredTestClass();
+
+        if (runningQuarkusApplication != null) {
+            try {
+                Thread.currentThread().setContextClassLoader(runningQuarkusApplication.getClassLoader());
+                for (Object beforeClassCallback : beforeClassCallbacks) {
+                    beforeClassCallback.getClass().getMethod("beforeClass", Class.class).invoke(beforeClassCallback,
+                            runningQuarkusApplication.getClassLoader().loadClass(requiredTestClass.getName()));
+                }
+            } finally {
+                Thread.currentThread().setContextClassLoader(old);
+            }
+        } else {
+            // can this ever happen?
+            for (Object beforeClassCallback : beforeClassCallbacks) {
+                beforeClassCallback.getClass().getMethod("beforeClass", Class.class).invoke(beforeClassCallback,
+                        requiredTestClass);
+            }
+        }
+
         try {
             Thread.currentThread().setContextClassLoader(requiredTestClass.getClassLoader());
             result = invocation.proceed();
@@ -583,10 +774,6 @@ public class QuarkusTestExtension
                     e);
         } finally {
             Thread.currentThread().setContextClassLoader(old);
-        }
-        ExtensionState state = ensureStarted(extensionContext);
-        if (failedBoot) {
-            return result;
         }
 
         // We do this here as well, because when @TestInstance(Lifecycle.PER_CLASS) is used on a class,
@@ -606,18 +793,31 @@ public class QuarkusTestExtension
 
     private void initTestState(ExtensionContext extensionContext, ExtensionState state) {
         try {
+            Class<?> previousActualTestClass = actualTestClass;
             actualTestClass = Class.forName(extensionContext.getRequiredTestClass().getName(), true,
                     Thread.currentThread().getContextClassLoader());
-
-            actualTestInstance = runningQuarkusApplication.instance(actualTestClass);
+            if (extensionContext.getRequiredTestClass().isAnnotationPresent(Nested.class)) {
+                Class<?> parent = actualTestClass.getEnclosingClass();
+                Object parentInstance = runningQuarkusApplication.instance(parent);
+                Constructor<?> declaredConstructor = actualTestClass.getDeclaredConstructor(parent);
+                declaredConstructor.setAccessible(true);
+                actualTestInstance = declaredConstructor.newInstance(parentInstance);
+            } else {
+                actualTestInstance = runningQuarkusApplication.instance(actualTestClass);
+            }
 
             Class<?> resM = Thread.currentThread().getContextClassLoader().loadClass(TestHTTPResourceManager.class.getName());
             resM.getDeclaredMethod("inject", Object.class, List.class).invoke(null, actualTestInstance,
                     testHttpEndpointProviders);
             state.testResourceManager.getClass().getMethod("inject", Object.class).invoke(state.testResourceManager,
                     actualTestInstance);
-            for (Object beforeAllCallback : beforeAllCallbacks) {
-                beforeAllCallback.getClass().getMethod("beforeAll", Object.class).invoke(beforeAllCallback, actualTestInstance);
+            for (Object afterConstructCallback : afterConstructCallbacks) {
+                afterConstructCallback.getClass().getMethod("afterConstruct", Object.class).invoke(afterConstructCallback,
+                        actualTestInstance);
+            }
+            for (Object legacyAfterConstructCallback : legacyAfterConstructCallbacks) {
+                legacyAfterConstructCallback.getClass().getMethod("beforeAll", Object.class)
+                        .invoke(legacyAfterConstructCallback, actualTestInstance);
             }
         } catch (Exception e) {
             throw new TestInstantiationException("Failed to create test instance", e);
@@ -627,7 +827,7 @@ public class QuarkusTestExtension
     @Override
     public void interceptBeforeEachMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext,
             ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             invocation.proceed();
             return;
         }
@@ -638,7 +838,7 @@ public class QuarkusTestExtension
     @Override
     public void interceptTestMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext,
             ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             invocation.proceed();
             return;
         }
@@ -649,7 +849,7 @@ public class QuarkusTestExtension
     @Override
     public void interceptTestTemplateMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext,
             ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             invocation.proceed();
             return;
         }
@@ -661,7 +861,7 @@ public class QuarkusTestExtension
     @Override
     public <T> T interceptTestFactoryMethod(Invocation<T> invocation,
             ReflectiveInvocationContext<Method> invocationContext, ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             return invocation.proceed();
         }
         T result = (T) runExtensionMethod(invocationContext, extensionContext);
@@ -672,7 +872,7 @@ public class QuarkusTestExtension
     @Override
     public void interceptAfterEachMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext,
             ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             invocation.proceed();
             return;
         }
@@ -683,7 +883,7 @@ public class QuarkusTestExtension
     @Override
     public void interceptAfterAllMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext,
             ExtensionContext extensionContext) throws Throwable {
-        if (isNativeTest(extensionContext)) {
+        if (isNativeOrIntegrationTest()) {
             invocation.proceed();
             return;
         }
@@ -693,6 +893,7 @@ public class QuarkusTestExtension
 
     private Object runExtensionMethod(ReflectiveInvocationContext<Method> invocationContext, ExtensionContext extensionContext)
             throws Throwable {
+        resetHangTimeout();
         Method newMethod = null;
 
         ClassLoader old = setCCL(runningQuarkusApplication.getClassLoader());
@@ -747,11 +948,16 @@ public class QuarkusTestExtension
 
     @Override
     public void afterAll(ExtensionContext context) throws Exception {
-        if (!isNativeTest(context) && (runningQuarkusApplication != null)) {
-            popMockContext();
-        }
-        if (originalCl != null) {
-            setCCL(originalCl);
+        resetHangTimeout();
+        try {
+            if (!isNativeOrIntegrationTest() && (runningQuarkusApplication != null)) {
+                popMockContext();
+            }
+            if (originalCl != null) {
+                setCCL(originalCl);
+            }
+        } finally {
+            currentTestClassStack.pop();
         }
     }
 
@@ -794,19 +1000,64 @@ public class QuarkusTestExtension
         }
     }
 
+    @Override
+    public ConditionEvaluationResult evaluateExecutionCondition(ExtensionContext context) {
+        if (!context.getTestClass().isPresent()) {
+            return ConditionEvaluationResult.enabled("No test class specified");
+        }
+        if (context.getTestInstance().isPresent()) {
+            return ConditionEvaluationResult.enabled("Quarkus Test Profile tags only affect classes");
+        }
+        String tagsStr = System.getProperty("quarkus.test.profile.tags");
+        if ((tagsStr == null) || tagsStr.isEmpty()) {
+            return ConditionEvaluationResult.enabled("No Quarkus Test Profile tags");
+        }
+        Class<? extends QuarkusTestProfile> testProfile = getQuarkusTestProfile(context);
+        if (testProfile == null) {
+            return ConditionEvaluationResult.disabled("Test '" + context.getRequiredTestClass()
+                    + "' is not annotated with '@QuarkusTestProfile' but 'quarkus.profile.test.tags' was set");
+        }
+        QuarkusTestProfile profileInstance;
+        try {
+            profileInstance = testProfile.getConstructor().newInstance();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+        Set<String> testProfileTags = profileInstance.tags();
+        String[] tags = tagsStr.split(",");
+        for (String tag : tags) {
+            String trimmedTag = tag.trim();
+            if (testProfileTags.contains(trimmedTag)) {
+                return ConditionEvaluationResult.enabled("Tag '" + trimmedTag + "' is present on '" + testProfile
+                        + "' which is used on test '" + context.getRequiredTestClass());
+            }
+        }
+        return ConditionEvaluationResult.disabled("Test '" + context.getRequiredTestClass()
+                + "' disabled because 'quarkus.profile.test.tags' don't match the tags of '" + testProfile + "'");
+    }
+
     class ExtensionState implements ExtensionContext.Store.CloseableResource {
 
         private final Closeable testResourceManager;
         private final Closeable resource;
         private final AtomicBoolean closed = new AtomicBoolean();
+        private final Thread shutdownHook;
 
         ExtensionState(Closeable testResourceManager, Closeable resource) {
             this.testResourceManager = testResourceManager;
             this.resource = resource;
+            this.shutdownHook = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    ExtensionState.this.close();
+                }
+            }, "Quarkus Test Cleanup Shutdown task");
+            Runtime.getRuntime().addShutdownHook(shutdownHook);
         }
 
         @Override
         public void close() {
+            resetHangTimeout();
             if (closed.compareAndSet(false, true)) {
                 ClassLoader old = Thread.currentThread().getContextClassLoader();
                 if (runningQuarkusApplication != null) {
@@ -828,6 +1079,7 @@ public class QuarkusTestExtension
                         Thread.currentThread().setContextClassLoader(old);
                     }
                 }
+                Runtime.getRuntime().removeShutdownHook(shutdownHook);
             }
         }
     }
@@ -928,5 +1180,40 @@ public class QuarkusTestExtension
 
             return allCustomizers;
         }
+    }
+
+    private static void resetHangTimeout() {
+        if (hangTaskKey != null) {
+            hangTaskKey.cancel(false);
+            hangTaskKey = hangDetectionExecutor.schedule(hangDetectionTask, hangTimeout.toMillis(), TimeUnit.MILLISECONDS);
+        }
+    }
+
+    static boolean hasPerTestResources(ExtensionContext extensionContext) {
+        return hasPerTestResources(extensionContext.getRequiredTestClass());
+    }
+
+    public static boolean hasPerTestResources(Class<?> requiredTestClass) {
+        while (requiredTestClass != Object.class) {
+            for (QuarkusTestResource testResource : requiredTestClass.getAnnotationsByType(QuarkusTestResource.class)) {
+                if (testResource.restrictToAnnotatedClass()) {
+                    return true;
+                }
+            }
+            // scan for meta-annotations
+            for (Annotation annotation : requiredTestClass.getAnnotations()) {
+                // skip TestResource annotations
+                if (annotation.annotationType() != QuarkusTestResource.class) {
+                    // look for a TestResource on the annotation itself
+                    if (annotation.annotationType().getAnnotationsByType(QuarkusTestResource.class).length > 0) {
+                        // meta-annotations are per-test scoped for now
+                        return true;
+                    }
+                }
+            }
+            // look up
+            requiredTestClass = requiredTestClass.getSuperclass();
+        }
+        return false;
     }
 }
